--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -5,24 +5,23 @@ servers:
   web:
     hosts:
       - 159.65.65.105
-    options:
-      volumes:
-        - /var/apps/recipe-book/log:/app/log
-        - /var/apps/recipe-book/storage:/app/storage
-        - /var/apps/recipe-book/tmp:/app/tmp
-        - /var/apps/recipe-book/packs:/app/public/assets
-
-env:
-  clear:
-    RAILS_ENV: production
-    RACK_ENV: production
-    RAILS_LOG_TO_STDOUT: "1"
-    RAILS_SERVE_STATIC_FILES: "1"
-    DATABASE_URL: "postgres://recipe_user:supersegura123@127.0.0.1:5432/recipebook_prod"
-  secret:
-    - RAILS_MASTER_KEY
-    - POSTGRES_PASSWORD
-    - GHCR_PAT
+    volumes:                       # <— no "options:"
+      - /var/apps/recipe-book/log:/rails/log
+      - /var/apps/recipe-book/storage:/rails/storage
+      - /var/apps/recipe-book/tmp:/rails/tmp
+      - /var/apps/recipe-book/assets:/rails/public/assets
+    env:
+      clear:
+        RAILS_ENV: production
+        RACK_ENV: production
+        RAILS_LOG_TO_STDOUT: "1"
+        RAILS_SERVE_STATIC_FILES: "1"
+        # Usa el hostname del accessory "db" (ver abajo)
+        DATABASE_URL: "postgres://recipe_user:${POSTGRES_PASSWORD}@db:5432/recipebook_prod"
+      secret:
+        - RAILS_MASTER_KEY
+        - POSTGRES_PASSWORD
+        - GHCR_PAT
 
 registry:
   server: ghcr.io
@@ -46,12 +45,5 @@ accessories:
         POSTGRES_USER: recipe_user
       secret:
         - POSTGRES_PASSWORD
-    options:
-      volumes:
-        - /var/apps/recipe-book/postgres:/var/lib/postgresql/data
-
-
-prune:
-  images: true     
-  containers: true
-  volumes: false  
+    volumes:
+      - /var/apps/recipe-book/postgres:/var/lib/postgresql/data
